force-app/main/default/objects/sfmc_campaign_534007695__dll/fields/CampaignStatus__c.field-meta.xml
<CustomField>
    <fullName>CampaignStatus__c</fullName>
    <label>Campaign Status</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>CampaignStatus</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>